menu on mobile fixed

--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -6,3 +6,37 @@ nav{
 .nav-link.active{
     color: #FF1F17!important;
 }
+
+@media (max-width: 992px) {
+    .navbar-collapse {
+        position: fixed;
+        top: 0px; /* adjust to height of navbar */
+        left: 0;
+        padding-left: 15px;
+        padding-right: 15px;
+        padding-bottom: 15px;
+        width: 65vw!important;
+        height: 100%;
+        background-color: #232020da;
+        text-align: center;
+        z-index: 9999;
+    }
+
+    .navbar-collapse>.navbar-nav{
+        margin-top: 10vh;
+    }
+
+    .navbar-collapse.collapsing {
+        left: -75%;
+        transition: height 0s ease;
+    }
+
+    .navbar-collapse.show {
+        left: 0;
+        transition: left 300ms ease-in-out;
+    }
+
+    .navbar-toggler.collapsed ~ .navbar-collapse {
+        transition: left 500ms ease-in-out;
+    }
+}
